listings/ch03-common-programming-concepts/no-listing-01-variables-are-immutable/output.txt
$ cargo run
   Compiling değişkenler v0.1.0 (file:///projects/değişkenler)
error[E0384]: cannot assign twice to immutable variable `x`
 --> src/main.rs:4:5
  |
2 |     let x = 5;
  |         -
  |         |
  |         first assignment to `x`
  |         help: consider making this binding mutable: `mut x`
3 |     println!("x'in değeri: {x}");
4 |     x = 6;
  |     ^^^^^ cannot assign twice to immutable variable

For more information about this error, try `rustc --explain E0384`.
error: could not compile `değişkenler` (bin "değişkenler") due to 1 previous error
